<resources>
    <string name="app_name">E-Care</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hospital Name</string>
    <string name="nav_header_subtitle">hospital@hospital.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Register"><a href="http://www.google.com">Register</a></string>

    <string name="get_started">Get Started</string>
    <string name="onboarding_subtitle">change the way you control, edit and manage patients information</string>
    <string name="onboarding_title">Easy Hospital and Patient Management System</string>

    <string name="title_home">Home</string>
    <string name="to_add_a_photo">add a photo</string>
    <string name="upload_a_photo">upload a photo</string>
    <string name="take_photo">take photo</string>
    <string name="choose_from_camera_roll">Choose from camera roll</string>
    <string name="create_account">create account</string>
    <string name="a_back_action">a back button</string>
    <string name="finish">finish</string>
    <string name="Upload_a_photo">Upload a photo</string>
    <string name="Create_account">Create Account</string>
    <string name="departments">Departments</string>
    <string name="settings_button">settings_button</string>
    <string name="back_arrow">back_arrow</string>
    <string name="search_logo">search_logo</string>
    <string name="mic_logo">mic_logo</string>
    <string name="settings">Settings</string>
    <string name="appointments">Appointments</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="appointment_logo">Appointment</string>
    <string name="settings_logo">settings_logo</string>
    <string name="home_logo">home_logo</string>
    <string name="profile_logo">profile_logo</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_appointments">Appointments</string>
    <string name="title_doctors">Doctors</string>
    <string name="title_departments">Departments</string>
    <string name="title_patients">Patients</string>
    <string name="title_patient_transfers">Patient Transfers</string>
    <string name="title_hospital_connect">Hospital Connect</string>
    <string name="title_payments">Payments</string>
    <string name="title_help">Help</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_history">History</string>
    <string name="title_filter">Filter</string>

    <string name="title_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="doctors_string">Doctors</string>
    <string name="last_name_string">Last name</string>
    <string name="email_string">Email</string>
    <string name="phone_string">Phone</string>
    <string name="organization_string">Organization</string>
    <string name="password_string">Password</string>
    <string name="patient_string">Patients</string>
    <string name="first_name_string">First name</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="country_string">Country</string>
    <string name="birth_date_string">Birth Date</string>
    <string name="next_string">Next</string>
    <string name="create_account_string">Create Account</string>
    <string name="string"><![CDATA[<]]></string>
    <string name="string"><![CDATA[<]]></string>
    <string name="doctors_profile_pic_string">Doctors_Profile_Pic</string>
    <string name="profile_string">Profile</string>
    <string name="notificationicon_string">notificationIcon</string>
    <string name="personal_information_string">Personal Information</string>
    <string name="my_doctors_string">My Doctors</string>
    <string name="appointments_string">Appointments</string>
    <string name="online_consultations_string">Online Consultations</string>
    <string name="medical_records_string">Medical Records</string>
    <string name="my_medical_tests_string">My Medical Tests</string>
    <string name="home_string">Home</string>
    <string name="profile_string">Profile</string>
    <string name="setting_string">Setting</string>
    <string name="appointments_string">Appointments</string>
</resources>