<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBF2F3">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/departments"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="44dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/settings_button"
        android:rotation="91"
        android:src="@drawable/ic_baseline_tune_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toEndOf="@+id/txtView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/back_arrow"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintEnd_toStartOf="@+id/txtView"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/search_text"
        android:layout_width="376dp"
        android:layout_height="34dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView"
        app:layout_constraintVertical_bias="0.031" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/search_logo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="26dp"
        android:layout_height="29dp"
        android:layout_marginBottom="504dp"
        android:contentDescription="@string/mic_logo"
        android:src="@drawable/ic_baseline_mic_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="440dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_text" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="36dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/home_logo"
            android:src="@drawable/ic_baseline_home_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="34dp"
            android:layout_height="38dp"
            android:layout_marginStart="120dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/profile_logo"
            android:src="@drawable/ic_baseline_person_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.163"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            tools:layout_editor_absoluteY="552dp" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="38dp"
            android:layout_height="37dp"
            android:layout_marginStart="230dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/appointment_logo"
            android:src="@drawable/ic_outline_calendar_today_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="37dp"
            android:layout_height="42dp"
            android:layout_marginStart="330dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/settings_logo"
            android:src="@drawable/ic_baseline_settings_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="7dp"
            android:text="@string/home"
            android:textStyle="bold"
            android:textColor="#181A1B"/>

        <TextView
            android:id="@+id/txtView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginTop="30dp"
            android:text="@string/profile"
            android:textColor="#181A1B"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="30dp"
            android:text="@string/appointments"
            android:textColor="#181A1B"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="325dp"
            android:layout_marginTop="30dp"
            android:text="@string/settings"
            android:textColor="#181A1B"
            android:textStyle="bold" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>