<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C2CDCB">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="350dp"
        android:layout_height="430dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="122dp"
            android:layout_height="115dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="false"
            android:background="@drawable/roundbut"
            android:backgroundTint="#60000000"
            android:contentDescription="@string/to_add_a_photo"
            android:cropToPadding="false"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            tools:targetApi="lollipop" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="190dp"
            android:padding="4dp"
            android:text="@string/Upload_a_photo"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="260dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/take_photo"
            android:textColor="@color/white"
            app:backgroundTint="@color/secondary"
            tools:targetApi="lollipop" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cam_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="330dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/secondary"
            android:text="@string/choose_from_camera_roll"
            android:textColor="@color/white"
            app:backgroundTint="@color/secondary"
            tools:targetApi="lollipop" />
    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/Create_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="51dp"
        android:layout_height="33dp"
        android:contentDescription="@string/a_back_action"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="#0F2DD6"
        android:text="@string/finish"
        android:textColor="@color/white"
        app:backgroundTint="@color/design_default_color_primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:targetApi="lollipop" />
</androidx.constraintlayout.widget.ConstraintLayout>